--- a/Luhman_16/figures/plot_K_band_chem_ratios.ipynb
+++ b/Luhman_16/figures/plot_K_band_chem_ratios.ipynb
@@ -80,11 +80,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/tmp/regt/ipykernel_2279777/2489672473.py:56: RuntimeWarning: divide by zero encountered in log10\n",
+      "/var/tmp/regt/ipykernel_2837996/2489672473.py:56: RuntimeWarning: divide by zero encountered in log10\n",
       "  abs_abund['Na/H'] = np.log10(VMR_Na/VMR_H) - np.log10(solar['Na']/solar['H'])\n",
-      "/var/tmp/regt/ipykernel_2279777/2489672473.py:57: RuntimeWarning: divide by zero encountered in log10\n",
+      "/var/tmp/regt/ipykernel_2837996/2489672473.py:57: RuntimeWarning: divide by zero encountered in log10\n",
       "  abs_abund['K/H'] = np.log10(VMR_K/VMR_H) - np.log10(solar['K']/solar['H'])\n",
-      "/var/tmp/regt/ipykernel_2279777/2489672473.py:58: RuntimeWarning: divide by zero encountered in log10\n",
+      "/var/tmp/regt/ipykernel_2837996/2489672473.py:58: RuntimeWarning: divide by zero encountered in log10\n",
       "  abs_abund['Fe/H'] = np.log10(VMR_Fe/VMR_H) - np.log10(solar['Fe']/solar['H'])\n"
      ]
     },
@@ -246,11 +246,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/tmp/regt/ipykernel_2279777/2489672473.py:51: RuntimeWarning: divide by zero encountered in log10\n",
+      "/var/tmp/regt/ipykernel_2837996/2489672473.py:51: RuntimeWarning: divide by zero encountered in log10\n",
       "  abs_abund['C/H'] = np.log10(VMR_C/VMR_H) - np.log10(solar['C']/solar['H'])\n",
-      "/var/tmp/regt/ipykernel_2279777/2489672473.py:52: RuntimeWarning: divide by zero encountered in log10\n",
+      "/var/tmp/regt/ipykernel_2837996/2489672473.py:52: RuntimeWarning: divide by zero encountered in log10\n",
       "  abs_abund['N/H'] = np.log10(VMR_N/VMR_H) - np.log10(solar['N']/solar['H'])\n",
-      "/var/tmp/regt/ipykernel_2279777/2489672473.py:55: RuntimeWarning: divide by zero encountered in log10\n",
+      "/var/tmp/regt/ipykernel_2837996/2489672473.py:55: RuntimeWarning: divide by zero encountered in log10\n",
       "  abs_abund['S/H'] = np.log10(VMR_S/VMR_H) - np.log10(solar['S']/solar['H'])\n"
      ]
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -704,8 +704,7 @@
       "log_a\n",
       "$0.198^{+0.005}_{-0.005}$ & $0.212^{+0.005}_{-0.005}$ & $0.124^{+0.005}_{-0.005}$ & $0.109^{+0.005}_{-0.005}$ \\\\\n",
       "log_l\n",
-      "$-1.300^{+0.005}_{-0.001}$ & $-1.299^{+0.006}_{-0.002}$ & $-1.351^{+0.010}_{-0.004}$ & $-1.316^{+0.014}_{-0.010}$ \\\\\n",
-      "$0.77^{+4.71}_{-0.72}$ & $0.66^{+4.74}_{-0.60}$ \\\\\n"
+      "$-1.300^{+0.005}_{-0.001}$ & $-1.299^{+0.006}_{-0.002}$ & $-1.351^{+0.010}_{-0.004}$ & $-1.316^{+0.014}_{-0.010}$ \\\\\n"
      ]
     }
    ],
@@ -798,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +866,7 @@
        "        1.85818832]))"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -983,6 +982,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$6.94e-05^{+3.14e-06}_{-3.03e-06}$ \\\\\n",
+      "$8.71e-05$\n"
+     ]
+    }
+   ],
+   "source": [
+    "result_utils.latex_format(abs_abund_A['HF']/(abs_abund_A['CH4']+abs_abund_A['12CO']+abs_abund_A['13CO']), decimals=2, as_p10=True)\n",
+    "print(f'${10**(4.40-8.46):.2e}$')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -991,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1290,16 +1308,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/tmp/regt/ipykernel_1930380/4056419412.py:54: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/var/tmp/regt/ipykernel_2836860/4056419412.py:54: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax[1,0].set_xticklabels(ax[1,0].get_xticklabels(), rotation=0)\n",
-      "/var/tmp/regt/ipykernel_1930380/4056419412.py:55: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/var/tmp/regt/ipykernel_2836860/4056419412.py:55: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax[1,0].set_yticklabels(ax[1,0].get_yticklabels(), rotation=0)\n"
      ]
     },
@@ -1468,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
